--- a/app/src/main/res/layout/activity_add_task.xml
+++ b/app/src/main/res/layout/activity_add_task.xml
@@ -1,12 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     This vertical linear layout contains all the views in the AddTaskActivity code.
     This includes an EditText to add a task description, and buttons to select a priority
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingEnd="@dimen/activity_horizontal_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -22,19 +21,19 @@
         android:layout_height="wrap_content"
         android:gravity="start"
         android:hint="@string/edit_task_description"
-        android:paddingBottom ="@dimen/activity_horizontal_margin"
-        android:maxLength="30"/>
+        android:maxLength="30"
+        android:paddingBottom="@dimen/activity_horizontal_margin" />
 
     <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
     <TextView
+        style="@style/TextAppearance.AppCompat.Medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:textColor="@android:color/primary_text_light"
-        style="@style/TextAppearance.AppCompat.Medium"
+        android:layout_marginBottom="@dimen/add_task_priority_bottom_margin"
+        android:layout_marginTop="@dimen/add_task_priority_top_margin"
         android:text="@string/priority_string"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"/>
+        android:textColor="@android:color/primary_text_light" />
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -46,46 +45,46 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center"
+            android:orientation="horizontal"
             android:weightSum="3">
 
             <Button
-                style="?android:attr/buttonBarButtonStyle"
-                android:textColor="@android:color/primary_text_light"
                 android:id="@+id/buttonP1"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="@dimen/add_task_button_margin"
+                android:layout_weight="1"
                 android:background="@color/materialRed"
+                android:onClick="onPrioritySelected"
                 android:text="@string/high_priority"
-                android:layout_weight="1"
-                android:onClick="onPrioritySelected"
-                android:layout_margin="4dp"/>
+                android:textColor="@android:color/primary_text_light" />
 
             <Button
-                style="?android:attr/buttonBarButtonStyle"
-                android:textColor="@android:color/primary_text_light"
                 android:id="@+id/buttonP2"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/materialOrange"
-                android:text="@string/med_priority"
+                android:layout_margin="@dimen/add_task_button_margin"
                 android:layout_weight="1"
+                android:background="@color/materialOrange"
                 android:onClick="onPrioritySelected"
-                android:layout_margin="4dp"
-                android:textAlignment="center" />
+                android:text="@string/med_priority"
+                android:textAlignment="center"
+                android:textColor="@android:color/primary_text_light" />
 
             <Button
-                style="?android:attr/buttonBarButtonStyle"
-                android:textColor="@android:color/primary_text_light"
                 android:id="@+id/buttonP3"
+                style="?android:attr/buttonBarButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@color/materialYellow"
-                android:text="@string/low_priority"
+                android:layout_margin="@dimen/add_task_button_margin"
                 android:layout_weight="1"
+                android:background="@color/materialYellow"
                 android:onClick="onPrioritySelected"
-                android:layout_margin="4dp"/>
+                android:text="@string/low_priority"
+                android:textColor="@android:color/primary_text_light" />
 
         </LinearLayout>
 
@@ -93,8 +92,8 @@
         <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_gravity="center"
+            android:orientation="horizontal"
             android:weightSum="3">
 
             <RadioButton
@@ -102,27 +101,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="onPrioritySelected"
-                android:theme="@style/WhiteRadioButton"
-                android:layout_margin="4dp"/>
+                android:theme="@style/WhiteRadioButton" />
 
             <RadioButton
                 android:id="@+id/radButton2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="onPrioritySelected"
                 android:layout_weight="1"
-                android:theme="@style/WhiteRadioButton"
-                android:layout_margin="4dp" />
+                android:theme="@style/WhiteRadioButton" />
 
             <RadioButton
                 android:id="@+id/radButton3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:onClick="onPrioritySelected"
                 android:layout_weight="1"
-                android:theme="@style/WhiteRadioButton"
-                android:layout_margin="4dp" />
+                android:theme="@style/WhiteRadioButton" />
 
         </RadioGroup>
 
@@ -131,23 +124,23 @@
     <!-- Add button -->
     <Button
         android:id="@+id/addButton"
+        style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/add_button"
-        style="@style/TextAppearance.AppCompat.Large"
-        android:textColor="@android:color/primary_text_dark"
+        android:layout_margin="@dimen/add_task_button_margin"
         android:background="@color/colorPrimary"
         android:onClick="onClickAddTask"
-        android:layout_margin="4dp"/>
+        android:text="@string/add_button"
+        android:textColor="@android:color/primary_text_dark" />
 
     <ImageView
         android:id="@+id/addTaskImage"
         android:layout_width="match_parent"
-        android:layout_height="319dp"
+        android:layout_height="@dimen/add_task_image_height"
         android:layout_gravity="center"
         android:contentDescription="@string/grey_pencil"
-        android:padding="8dp"
+        android:padding="@dimen/add_task_image_padding"
         android:src="@drawable/ic_pencil" />
 
 </LinearLayout>
