--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -7,6 +7,13 @@
     <item
         android:id="@+id/menu_item_share"
         app:showAsAction="ifRoom"
-        android:title="@string/share" />
+        android:icon="@drawable/ic_share"
+        android:title="@string/share"/>
+
+    <item
+        android:id="@+id/menu_item_sort"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_sort"
+        android:title="@string/sort_order"/>
 
 </menu>
